# Django-backend-ghostpost2

./: README.md  db.sqlite3  manage.py  pyproject.toml
api/: serializers.py  views.py
ghostpost2/: asgi.py  settings.py  urls.py  wsgi.py
ghostpost_app/: models.py
ghostpost_app/migrations/: 0001_initial.py  0002_auto_20201002_0420.py  0003_auto_20201002_0422.py
